; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched.c_complete_all.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched.c_complete_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.completion = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@UINT_MAX = common dso_local global i32 0, align 4
@TASK_NORMAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @complete_all(%struct.completion* %0) #0 {
  %2 = alloca %struct.completion*, align 8
  %3 = alloca i64, align 8
  store %struct.completion* %0, %struct.completion** %2, align 8
  %4 = load %struct.completion*, %struct.completion** %2, align 8
  %5 = getelementptr inbounds %struct.completion, %struct.completion* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i64, i64* %3, align 8
  %8 = call i32 @spin_lock_irqsave(i32* %6, i64 %7)
  %9 = load i32, i32* @UINT_MAX, align 4
  %10 = sdiv i32 %9, 2
  %11 = load %struct.completion*, %struct.completion** %2, align 8
  %12 = getelementptr inbounds %struct.completion, %struct.completion* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = add nsw i32 %13, %10
  store i32 %14, i32* %12, align 4
  %15 = load %struct.completion*, %struct.completion** %2, align 8
  %16 = getelementptr inbounds %struct.completion, %struct.completion* %15, i32 0, i32 1
  %17 = load i32, i32* @TASK_NORMAL, align 4
  %18 = call i32 @__wake_up_common(%struct.TYPE_2__* %16, i32 %17, i32 0, i32 0, i32* null)
  %19 = load %struct.completion*, %struct.completion** %2, align 8
  %20 = getelementptr inbounds %struct.completion, %struct.completion* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i64, i64* %3, align 8
  %23 = call i32 @spin_unlock_irqrestore(i32* %21, i64 %22)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @__wake_up_common(%struct.TYPE_2__*, i32, i32, i32, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
